# Django-Pass-Gen

./: pyproject.toml
pass_gen/generator/: views.py
pass_gen/generator/templates/generator/: description.html  home.html  password.html
pass_gen/pass_gen/: asgi.py  settings.py  urls.py  wsgi.py
