[tool.poetry]
name = "django-pass-gen"
version = "0.1.0"
description = ""
authors = ["Mykhailo Murat <mykhailo.murat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
